--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     rel="stylesheet"
     />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <header>
@@ -30,13 +31,15 @@
     <section id="about" class="about">
         <img src="./assets/profil/eyissss.jpg" alt="Aril's Photo">
         <h1>Hai Eyissss</h1>
-        <p>haii my name is deyis abudi, i am 17 years old, my hobby is eating and my ambition is to be rich</p>
+        <div class="heart-animation">💗💗💗</div>
+        <p>haii my name is deyis abudi, i am 17 years old, my hobby is eating and my ambition is to be rich</p>
     </section>
 
     <section id="contact" class="contact">
         <h2>Contact Me</h2>
         <p>Email: deyisabudi@gmail.com</p>
         <p>Phone: +62 838 6639 0493</p>
+        <a href="https://wa.me/6283866390493" class="btn btn-danger">WhatsApp</a>
     </section>
 
     <section id="social" class="contact">
@@ -59,5 +62,6 @@
     
 
     <script src="./assets/js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
